--- a/css/styles.css
+++ b/css/styles.css
@@ -654,7 +654,7 @@ img {
   transform: translate(-50%, -50%);
   transition: transform 250ms var(--timing-function);
 }
-.modal-close {
+.modal__close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -670,13 +670,13 @@ img {
 
   transition: fill 250ms var(--timing-function);
 }
-.modal-close:hover,
-.modal-close:focus {
+.modal__close:hover,
+.modal__close:focus {
   fill: var(--accent-color);
   background-color: var(--primary-bg-color);
 }
 
-.modal-title {
+.modal__title {
   margin-bottom: 12px;
 
   font-weight: 700;
@@ -688,7 +688,7 @@ img {
 .wrap-input {
   position: relative;
 }
-.form-input {
+.modal-form__input {
   width: 100%;
   height: 40px;
   padding: 11px 42px;
@@ -698,20 +698,20 @@ img {
   outline: none;
   transition: border-color 250ms var(--timing-function);
 }
-.form-input:focus {
+.modal-form__input:focus {
   border-color: var(--accent-color);
 }
-.form-input:focus + .form-input-svg {
+.modal-form__input:focus + .modal-form__svg {
   fill: var(--accent-color);
 }
 .form-field {
   margin-bottom: 10px;
 }
-.form-field-privacy {
+.privacy {
   margin-top: 20px;
   margin-bottom: 30px;
 }
-.form-input-svg {
+.modal-form__svg {
   position: absolute;
   top: 50%;
   left: 0;
@@ -720,7 +720,7 @@ img {
   transform: translateY(-50%);
   transition: fill 250ms var(--timing-function);
 }
-.form-label {
+.modal-form__label {
   margin-bottom: 4px;
 
   font-size: 12px;
@@ -729,7 +729,7 @@ img {
 
   color: var(--primary-text-color);
 }
-.form-textarea {
+.modal-form__textarea {
   width: 448px;
   height: 120px;
   padding: 12px 16px;
@@ -740,17 +740,17 @@ img {
   resize: none;
   transition: border-color 250ms var(--timing-function);
 }
-.form-textarea:focus {
+.modal-form__textarea:focus {
   border: 1px solid var(--accent-color);
 }
-.form-textarea::placeholder {
+.modal-form__textarea::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-btn-submit {
+.modal__submit {
   display: block;
   min-width: 200px;
   border-radius: 4px;
@@ -759,10 +759,10 @@ img {
 
   box-shadow: 0px 4px 4px var(--btn-shadow);
 }
-.privacy {
+.privacy__input {
   margin-right: 7px;
 }
-.privacy-text {
+.privacy__text {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -771,7 +771,7 @@ img {
   letter-spacing: 0.03em;
   align-items: center;
 }
-.privacy-link {
+.privacy__link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -779,11 +779,11 @@ img {
   text-decoration-line: underline;
   color: var(--accent-color);
 }
-.form-label {
+.modal-form__label {
   display: block;
   width: 100%;
 }
-.privacy-icon {
+.privacy__icon {
   content: '';
   width: 16px;
   height: 15px;
@@ -792,10 +792,10 @@ img {
   transition: background-color 250ms var(--timing-function),
     fill 250ms var(--timing-function);
 }
-.privacy-icon {
+.privacy__icon {
   fill: transparent;
 }
-.privacy:checked + .privacy-text .privacy-icon {
+.privacy__input:checked + .privacy__text .privacy__icon {
   background-color: var(--accent-color);
   border: none;
   fill: var(--primary-color);
