--- a/css/styles.css
+++ b/css/styles.css
@@ -519,7 +519,7 @@ img {
 }
 
 /* ----------- PORTFOLIO ------------*/
-.filter-btn {
+.filter__btn {
   display: inline-block;
   padding: 6px 22px;
   border-radius: 4px;
@@ -536,21 +536,21 @@ img {
     background-color 250ms var(--timing-function),
     box-shadow 250ms var(--timing-function);
 }
-.filter-item:not(:last-child) {
+.filter__item:not(:last-child) {
   margin-right: 8px;
 }
-.filter-btn:hover,
-.filter-btn:focus {
+.filter__btn:hover,
+.filter__btn:focus {
   background-color: var(--accent-color);
   color: var(--primary-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-.filter-btn.active {
+.btn--active {
   background-color: var(--accent-color);
   color: var(--primary-color);
 }
-.filter-list {
+.filter {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
@@ -561,26 +561,26 @@ img {
   margin-top: -30px;
   margin-left: -30px;
 }
-.gallery-item {
+.gallery-list__item {
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
   margin-left: 30px;
 
   transition: box-shadow 250ms var(--timing-function);
 }
-.gallery-item:hover,
-.gallery-item:focus {
+.gallery-list__item:hover,
+.gallery-list__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.item-contant {
+.gallery-contant {
   padding: 20px 24px;
 
   border-left: 1px solid var(--gallery-item-border-color);
   border-right: 1px solid var(--gallery-item-border-color);
   border-bottom: 1px solid var(--gallery-item-border-color);
 }
-.gallery-item-title {
+.gallery-contant__title {
   margin-bottom: 4px;
 
   color: var(--tittle-text-color);
@@ -589,7 +589,7 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
 }
-.gallery-item-text {
+.gallery-contant__text {
   color: var(--primary-text-color);
   font-weight: 400;
   font-size: 16px;
@@ -599,7 +599,7 @@ img {
   position: relative;
   overflow: hidden;
 }
-.gallery-thumb-text {
+.gallery-thumb__text {
   position: absolute;
   display: block;
   top: 0;
@@ -616,7 +616,7 @@ img {
   transform: translateY(100%);
   transition: transform 250ms var(--timing-function);
 }
-.gallery-item:hover .gallery-thumb-text {
+.gallery-list__item:hover .gallery-thumb__text {
   transform: translateY(0);
 }
 
