--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,70 +1,72 @@
 .header {
   border-bottom: 1px solid var(--header-border-color);
+  &__container {
+    display: flex;
+    align-items: center;
+  }
 }
-.header__container {
-  display: flex;
-  align-items: center;
-}
+
 .nav {
   margin-left: 93px;
-}
-.nav__list {
-  display: flex;
-}
-.nav__item:not(:last-child) {
-  margin-right: 50px;
-}
-.nav__link {
-  position: relative;
+  &__list {
+    display: flex;
+  }
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  &__link {
+    position: relative;
 
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--tittle-text-color);
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: var(--tittle-text-color);
 
-  transition: color 250ms var(--timing-function);
-}
-.nav__link.current::after {
-  position: absolute;
+    transition: color 250ms var(--timing-function);
+  }
+  &__link.current::after {
+    position: absolute;
 
-  content: '';
-  display: block;
-  width: 100%;
-  height: 4px;
-  bottom: 0;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    bottom: 0;
 
-  background-color: var(--accent-color);
-  border-radius: 2px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
+  &__link:hover,
+  &__link:focus {
+    color: var(--accent-color);
+  }
+  &__link.current {
+    color: var(--accent-color);
+  }
 }
-.nav__link:hover,
-.nav__link:focus {
-  color: var(--accent-color);
-}
-.nav__link.current {
-  color: var(--accent-color);
-}
+
 /* ----------- contacts-list ------------*/
 .contacts {
   display: flex;
   margin-left: auto;
-}
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
-}
-.contacts__link {
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--primary-text-color);
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  &__link {
+    display: flex;
+    align-items: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: var(--primary-text-color);
 
-  transition: color 250ms var(--timing-function);
-}
-.contacts__link:hover,
-.contacts__link:focus {
-  color: var(--accent-color);
-}
-.contacts__icon {
-  fill: currentColor;
-  margin-right: 10px;
+    transition: color 250ms var(--timing-function);
+  }
+  &__link:hover,
+  &__link:focus {
+    color: var(--accent-color);
+  }
+  &__icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
 }
