--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -9,8 +9,8 @@
 
   opacity: 1;
   transition: opacity 250ms var(--timing-function);
-}
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
 }
