--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -10,11 +10,11 @@
   line-height: 1.19;
 
   transition: color 250ms var(--timing-function);
-}
-.logo-text {
-  color: var(--accent-color);
-}
-.logo:hover,
-.logo:focus {
-  color: var(--accent-color);
+  &__text {
+    color: var(--accent-color);
+  }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
