--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,11 +1,3 @@
-.hero__btn {
-  display: inline-block;
-  min-width: 200px;
-  border-radius: 4px;
-  padding: 10px 32px;
-
-  box-shadow: 0px 4px 4px var(--btn-shadow);
-}
 .hero {
   max-width: 1600px;
   height: 600px;
@@ -23,18 +15,26 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-.hero__title {
-  display: block;
-  width: 696px;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  &__title {
+    display: block;
+    width: 696px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 
-  color: var(--primary-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+    color: var(--primary-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
+  &__btn {
+    display: inline-block;
+    min-width: 200px;
+    border-radius: 4px;
+    padding: 10px 32px;
+
+    box-shadow: 0px 4px 4px var(--btn-shadow);
+  }
 }
