--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/logo';
 @import './components/backdrop';
 @import './components/modal';
+@import './components/modal-form';
 
 @import './layout/header';
 @import './layout/hero';
