--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -8,9 +8,9 @@
   background-color: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
-  transition: opacity 250ms var(--timing-function);
-  &.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-  }
+  transition: opacity 250ms $timing-function;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
 }
