--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,8 +1,8 @@
 .btn {
   border: 0;
   font-family: inherit;
-  background-color: var(--accent-color);
-  color: var(--primary-color);
+  background-color: $accent-color;
+  color: $primary-color;
 
   font-weight: 700;
   font-size: 16px;
@@ -10,9 +10,9 @@
   letter-spacing: 0.06em;
 
   cursor: pointer;
-  transition: background-color 250ms var(--timing-function);
+  transition: background-color 250ms $timing-function;
   &:hover,
   &:focus {
-    background-color: var(--btn-hover-bgcolor);
+    background-color: $btn-hover-bgcolor;
   }
 }
