--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,55 +1,53 @@
-.modal-form {
-  &__input {
-    width: 100%;
-    height: 40px;
-    padding: 11px 42px;
+.modal-form__input {
+  width: 100%;
+  height: 40px;
+  padding: 11px 42px;
 
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: none;
-    transition: border-color 250ms var(--timing-function);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 250ms $timing-function;
+  &:focus {
+    border-color: $accent-color;
   }
-  &__input:focus {
-    border-color: var(--accent-color);
-  }
-  &__input:focus + &__svg {
-    fill: var(--accent-color);
-  }
-  &__svg {
-    position: absolute;
-    top: 50%;
-    left: 0;
+}
+.modal-form__svg {
+  position: absolute;
+  top: 50%;
+  left: 0;
 
-    margin-left: 12px;
-    transform: translateY(-50%);
-    transition: fill 250ms var(--timing-function);
+  margin-left: 12px;
+  transform: translateY(-50%);
+  transition: fill 250ms $timing-function;
+  .modal-form__input:focus + & {
+    fill: $accent-color;
   }
-  &__label {
-    display: block;
-    width: 100%;
-    margin-bottom: 4px;
+}
+.modal-form__label {
+  display: block;
+  width: 100%;
+  margin-bottom: 4px;
 
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
 
-    color: var(--primary-text-color);
-  }
-  &__textarea {
-    width: 448px;
-    height: 120px;
-    padding: 12px 16px;
+  color: $primary-text-color;
+}
+.modal-form__textarea {
+  width: 448px;
+  height: 120px;
+  padding: 12px 16px;
 
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: none;
-    resize: none;
-    transition: border-color 250ms var(--timing-function);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  resize: none;
+  transition: border-color 250ms $timing-function;
+  &:focus {
+    border: 1px solid $accent-color;
   }
-  &__textarea:focus {
-    border: 1px solid var(--accent-color);
-  }
-  &__textarea::placeholder {
+  &_::placeholder {
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
@@ -66,42 +64,41 @@
 .privacy {
   margin-top: 20px;
   margin-bottom: 30px;
-  .privacy__input {
-    margin-right: 7px;
-  }
-  &__text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    align-items: center;
-  }
-  &__link {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    text-decoration-line: underline;
-    color: var(--accent-color);
-  }
-
-  &__icon {
-    content: '';
-    width: 16px;
-    height: 15px;
-    margin-right: 7px;
-    border: 1px solid var(--tittle-text-color);
-    transition: background-color 250ms var(--timing-function),
-      fill 250ms var(--timing-function);
-  }
-  &__icon {
-    fill: transparent;
-  }
-  &__input:checked + &__text &__icon {
-    background-color: var(--accent-color);
-    border: none;
-    fill: var(--primary-color);
-  }
+}
+.privacy__input {
+  margin-right: 7px;
+}
+.privacy__text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  align-items: center;
+}
+.privacy__link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: $accent-color;
+}
+.privacy__icon {
+  content: '';
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  border: 1px solid $tittle-text-color;
+  transition: background-color 250ms $timing-function,
+    fill 250ms $timing-function;
+}
+.privacy__icon {
+  fill: transparent;
+}
+.privacy__input:checked + .privacy__text .privacy__icon {
+  background-color: $accent-color;
+  border: none;
+  fill: $primary-color;
 }
