--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,50 +7,50 @@
   min-height: 581px;
   padding: 40px;
 
-  background-color: var(--primary-bg-color);
+  background-color: $primary-bg-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
   transform: translate(-50%, -50%);
-  transition: transform 250ms var(--timing-function);
-  &__close {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    display: flex;
-    width: 30px;
-    height: 30px;
-    padding: 6px;
-    margin: 0;
+  transition: transform 250ms $timing-function;
+}
+.modal__close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  padding: 6px;
+  margin: 0;
 
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    background-color: var(--primary-bg-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: $primary-bg-color;
 
-    transition: fill 250ms var(--timing-function);
+  transition: fill 250ms $timing-function;
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+    background-color: $primary-bg-color;
   }
-  &__close:hover,
-  &__close:focus {
-    fill: var(--accent-color);
-    background-color: var(--primary-bg-color);
-  }
-  &__title {
-    margin-bottom: 12px;
+}
+.modal__title {
+  margin-bottom: 12px;
 
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    color: var(--tittle-text-color);
-  }
-  &__submit {
-    display: block;
-    min-width: 200px;
-    border-radius: 4px;
-    padding: 10px 55px;
-    margin: 0px auto;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: $tittle-text-color;
+}
+.modal__submit {
+  display: block;
+  min-width: 200px;
+  border-radius: 4px;
+  padding: 10px 55px;
+  margin: 0px auto;
 
-    box-shadow: 0px 4px 4px var(--btn-shadow);
-  }
+  box-shadow: 0px 4px 4px $btn-shadow;
 }
