--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,26 +1,25 @@
 .advantages-list {
   display: flex;
-  &__item {
-    flex-basis: calc(100% / 4);
-  }
-  &__item:not(:last-child) {
+}
+.advantages-list__item {
+  flex-basis: calc(100% / 4);
+  &:not(:last-child) {
     margin-right: 30px;
   }
-  &__title {
-    margin-bottom: 10px;
-
-    color: var(--tittle-text-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-transform: uppercase;
-  }
-  &__text {
-    font-size: 14px;
-    line-height: 1.71;
-  }
 }
+.advantages-list__title {
+  margin-bottom: 10px;
 
+  color: $tittle-text-color;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+.advantages-list__text {
+  font-size: 14px;
+  line-height: 1.71;
+}
 .thumb-icon {
   display: flex;
   align-items: center;
