--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,105 +2,32 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  background-color: var(--secondary-bg-color);
-  &__container {
-    display: flex;
-    align-items: baseline;
-  }
-  &__logo {
-    display: inline-block;
-    margin-bottom: 20px;
-    padding: 0;
-
-    color: var(--primary-color);
-  }
+  background-color: $secondary-bg-color;
 }
-.address {
-  &__link {
-    font-style: normal;
-    color: rgba(255, 255, 255, 0.6);
-
-    line-height: 1.71;
-
-    transition: color 250ms var(--timing-function);
-  }
-  &__link.map {
-    color: var(--primary-color);
-  }
-  &__link:hover,
-  &__link:focus {
-    color: var(--accent-color);
-  }
-}
-
-.join {
-  display: block;
-  min-width: 206px;
-  margin-left: 70px;
-  margin-right: 93px;
-  &__title {
-    margin-bottom: 20px;
-
-    color: var(--primary-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-transform: uppercase;
-  }
-}
-.join-list {
+.footer__container {
   display: flex;
-  &__item:not(:last-child) {
-    margin-right: 10px;
-  }
-  &__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-
-    background: rgba(255, 255, 255, 0.1);
-    fill: var(--primary-color);
-
-    transition: background-color 250ms var(--timing-function);
-  }
-  &__link:hover,
-  &__link:focus {
-    background-color: var(--accent-color);
-  }
+  align-items: baseline;
 }
+.footer__logo {
+  display: inline-block;
+  margin-bottom: 20px;
+  padding: 0;
 
-.subscribe {
-  width: 570px;
-  &__title {
-    margin-bottom: 20px;
-  }
-  &__btn {
-    display: inline-flex;
-    align-items: center;
-    border-radius: 4px;
-    padding: 10px 28px;
-    border-image-width: 0px;
+  color: $primary-color;
+}
+.address__link.map {
+  color: $primary-color;
+}
+.address__link {
+  font-style: normal;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.6);
 
-    box-shadow: 0px 4px 4px var(--btn-shadow);
-  }
-  &__svg {
-    margin-left: 10px;
-  }
-  &__input {
-    width: 353px;
-    height: 50px;
-    padding: 15px 16px;
-    margin-right: 12px;
+  line-height: 1.71;
 
-    font-size: 16px;
-    line-height: 1.25;
-    color: rgba(255, 255, 255, 0.6);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
-    background-color: transparent;
+  transition: color 250ms $timing-function;
+  &:hover,
+  &:focus {
+    color: $accent-color;
   }
 }
