--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -6,7 +6,7 @@
   padding-bottom: 200px;
   text-align: center;
 
-  background-color: #c4c4c4;
+  background-color: $hero-bg-color;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -15,26 +15,26 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  &__title {
-    display: block;
-    width: 696px;
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
+}
+.hero__title {
+  display: block;
+  width: 696px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
 
-    color: var(--primary-color);
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-  }
-  &__btn {
-    display: inline-block;
-    min-width: 200px;
-    border-radius: 4px;
-    padding: 10px 32px;
+  color: $primary-color;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+.hero__btn {
+  display: inline-block;
+  min-width: 200px;
+  border-radius: 4px;
+  padding: 10px 32px;
 
-    box-shadow: 0px 4px 4px var(--btn-shadow);
-  }
+  box-shadow: 0px 4px 4px $btn-shadow;
 }
