--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,44 +1,42 @@
-.work {
-  &.section {
-    padding-top: 0px;
-  }
-  &__title {
-    margin-bottom: 50px;
-    text-align: center;
+.work.section {
+  padding-top: 0px;
+}
+.work__title {
+  margin-bottom: 50px;
+  text-align: center;
 
-    color: var(--tittle-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-  }
+  color: $tittle-text-color;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
 }
 
 .work-list {
   display: flex;
-  &__item {
-    flex-basis: calc(100% / 3);
-  }
-  &__item:not(:last-child) {
+}
+.work-list__item {
+  flex-basis: calc(100% / 3);
+  &:not(:last-child) {
     margin-right: 30px;
   }
-  &__thumb {
-    position: relative;
-  }
-  &__text {
-    position: absolute;
-    bottom: 0;
+}
+.work-list__thumb {
+  position: relative;
+}
+.work-list__text {
+  position: absolute;
+  bottom: 0;
 
-    display: block;
-    width: 100%;
-    height: 70px;
-    padding: 27px 0;
+  display: block;
+  width: 100%;
+  height: 70px;
+  padding: 27px 0;
 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    text-transform: uppercase;
-    color: var(--primary-color);
-    background: rgba(47, 48, 58, 0.8);
-  }
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  color: $primary-color;
+  background: rgba(47, 48, 58, 0.8);
 }
