--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,11 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline-style: inherit;
+}
+.subscribe-form__input:hover, .subscribe-form__input:focus {
+  border: 1px solid #2196f3;
 }
 
 .backdrop {
