--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -34,4 +34,10 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
+  transition: border 250ms $timing-function;
+  outline-style: inherit;
+  &:hover,
+  &:focus {
+    border: 1px solid $accent-color;
+  }
 }
